--- a/apps/frontend/devcourses/src/index.css
+++ b/apps/frontend/devcourses/src/index.css
@@ -1,3 +1,7 @@
+@taiwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
