--- a/apps/frontend/devcourses/src/styles/App.css
+++ b/apps/frontend/devcourses/src/styles/App.css
@@ -1,4 +1,15 @@
-#root {
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+/* Opcional: pequeños ajustes globales */
+body {
+  @apply bg-dark text-white;
+  font-family: 'Inter', sans-serif;
+}
+
+
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -39,4 +50,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
